--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
@@ -28,13 +28,9 @@
                     <span class="span_content_info_xzq" id="span_content_info_xzq">福州</span>
                     <span class="span_content_info_qhcs" id="span_content_info_qhcs">[切换城市]</span>
                 </div>
-                    <div id="divFWCX" class="div_dropdown">
-                        <span class="span_xzq">北京市</span>
-                        <span class="span_xzq">上海市</span>
-                        <span class="span_xzq">广州市</span>
-                        <span class="span_xzq">深圳市</span>
-                    </div>
+                <div id="div_xzq" class="div_dropdown" style="display:none;">
                 </div>
+            </div>
 
         </div>
     </div>
