--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/HFCZ.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/HFCZ/HFCZ.cshtml
@@ -30,9 +30,15 @@
     <div id="div_HFCZ" style="display: block">
         <div class="div_content">
             <div class="div_content_info">
-                <span class="span_content_info_left">手机号码：</span>
-                <input class="input_content" id="inputHFSJHM" maxlength="13" type="text" placeholder="请输入手机号码">
-                <span class="span_conent_info" id="span_content_info_hfsj"></span>
+                <table>
+                    <tr>
+                        <td><span class="span_content_info_left">手机号码：</span></td>
+                        <td>
+                            <input class="input_content" id="inputHFSJHM" maxlength="13" type="text" placeholder="请输入手机号码">
+                            <span class="span_conent_info" id="span_content_info_hfsj"></span>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="div_content_info">
                 <span class="span_content_info_left">话费充值：</span>
@@ -45,7 +51,7 @@
             </div>
             <div class="div_content_info">
                 <span class="span_content_info_left">共需支付：</span>
-                <input class="input_content_gxzf" id="inputGXZF" value="0.0元" type="text">
+                <span class="span_content_gxzf" id="spanGXZF">0.0元</span>
                 <div class="div_content_info_left">友情提醒：本平台流量和话费不向消费者开具发票</div>
             </div>
             <div class="div_content_info">
@@ -56,9 +62,15 @@
     <div id="div_LLCZ" style="display: none">
         <div class="div_content">
             <div class="div_content_info">
-                <span class="span_content_info_left">手机号码：</span>
-                <input class="input_content" id="inputLLSJHM" maxlength="13" type="text" placeholder="请输入手机号码">
-                <span class="span_conent_info" id="span_content_info_llsj"></span>
+                <table>
+                    <tr>
+                        <td><span class="span_content_info_left">手机号码：</span></td>
+                        <td>
+                            <input class="input_content" id="inputLLSJHM" maxlength="13" type="text" placeholder="请输入手机号码">
+                            <span class="span_conent_info" id="span_content_info_llsj"></span>
+                        </td>
+                    </tr>
+                </table>
             </div>
             <div class="div_content_info">
                 <span class="span_content_info_left">流量充值：</span>
@@ -76,7 +88,7 @@
             </div>
             <div class="div_content_info" style="height: 156px;">
                 <span class="span_content_info_left">流量价格：</span>
-                <input class="input_content_gxzf" id="inputLLJG" value="0.0元" type="text">
+                <span class="span_content_gxzf" id="spanLLJG">0.0元</span>
                 <div class="div_content_info_left" style="height: 108px;">
                     流量充值说明<br />
                     1、生效时间：充值成功即时生效<br />
