--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/WZCX/WZCX.cshtml
@@ -24,14 +24,13 @@
         </div>
         <div class="divRight">
             <div class="spanCPHOut">
-                <div style="width: 200px">
+                <div style="width: 200px; margin-top:15px;">
                     <span class="span_content_info_xzq" id="span_content_info_xzq">福州</span>
                     <span class="span_content_info_qhcs" id="span_content_info_qhcs">[切换城市]</span>
                 </div>
-                <div id="div_xzq" class="div_dropdown" style="display:none;">
+                <div id="div_XZQ" class="div_dropdown">
                 </div>
             </div>
-
         </div>
     </div>
     <div class="div_content_info" style="z-index: 998">
@@ -41,26 +40,21 @@
         <div class="divRight">
             <div class="spanCPHOut">
                 <div id="divCPHText" class="spanCPHIn SRK">
-                    <span id="spanFWCX" column="CX" class="spanWZCX">闽</span>
+                    <span id="spanXZQJC" column="CX" class="spanXZQJC">闽</span>
                     <div class="divFWQKArrow"></div>
                 </div>
-                <div id="divFWCX" class="div_dropdown">
+                <div id="div_XZQJC" class="div_dropdown">
                 </div>
             </div>
-            <input class="input_content" id="inputHFSJHM" style="width: 146px;" type="text" value="A">
-        </div>
-        <div class="divLeft">
-            <span class="spanFWCZ">购车时间</span>
-        </div>
-        <div class="divRight">
             <div class="spanCPHOut">
-                <div id="divFWCXText" class="spanCPHIn SRK" style="width: 210px;">
-                    <span id="spanFWCX" column="CX" class="spanWZCX"></span>
+                <div id="divCPHSZMText" class="spanCPHIn SRK">
+                    <span id="spanCPHSZM" column="CX" class="spanXZQJC">A</span>
                     <div class="divFWQKArrow"></div>
                 </div>
-                <div id="divFWCX" class="divdropdown">
+                <div id="div_CPHSZM" class="div_dropdown" style="height:212px;">
                 </div>
             </div>
+            <input class="input_content" id="inputHFSJHM" style="width: 119px;" type="text" value="" placeholder="车牌号后5位">
         </div>
     </div>
     <div class="div_content_info">
@@ -68,13 +62,13 @@
             <span class="spanFWCZ">车架号</span>
         </div>
         <div class="divRight">
-            <input class="input_content" id="inputCJH" maxlength="13" type="text" value="">
+            <input class="input_content" id="inputCJH" maxlength="13" type="text" value="" placeholder="请输入车架号码后6位">
         </div>
         <div class="divLeft">
             <span class="spanFWCZ">发动机号</span>
         </div>
         <div class="divRight">
-            <input class="input_content" id="inputFDJH" maxlength="13" type="text" value="">
+            <input class="input_content" id="inputFDJH" maxlength="13" type="text" value="" placeholder="请输入发动机号码后6位">
         </div>
     </div>
     <div class="div_content_info">
@@ -82,7 +76,7 @@
             <span class="spanFWCZ">手机号码</span>
         </div>
         <div class="divRight">
-            <input class="input_content" id="inputSJHM" maxlength="13" type="text" value="">
+            <input class="input_content" id="inputSJHM" maxlength="13" type="text" value=""  placeholder="请输入手机号码">
         </div>
     </div>
     <div class="div_content_info">
