--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX.cshtml
@@ -14,8 +14,22 @@
     <script type="text/javascript" src="@Url.Content("~/Areas/Business/Scripts/Business/BZZX/BZZX.js")"></script>
 </head>
 <body>
-    <div>
-    
+    <div class="div_head">
+        <div class="div_head_main">
+            <span class="span_head_main_logo"></span>
+            <span class="span_head_main_bzzx">帮助中心</span>
+        </div>
+        <div class="div_head_nav">
+            <div class="div_head_nav_info">
+                <span class="span_head_nav_info" id="span_head_nav_info_sy">首页</span>
+                <span class="span_head_nav_info" id="span_head_nav_info_cjwt">常见问题</span>
+                <span class="span_head_nav_info" id="span_head_nav_info_lxkf">联系客服</span>
+                <span class="span_head_nav_info" id="span_head_nav_info_wzjy">网站建议</span>
+            </div>
+        </div>
+    </div>
+    <div class="div_body">
+        <iframe id="iframeright" style="border: none; width: 100%; height: 100%"></iframe>
     </div>
 </body>
 </html>
