--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -15,7 +15,26 @@
 </head>
 <body>
     <div>
-    
+        <div class="div_left_box">
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx_sy_zhyecz.png")" />
+                <span class="span_left_box_info_text">账户余额充值</span>
+            </div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info div_left_box_info_bottom"></div>
+            <div class="div_left_box_info div_left_box_info_bottom"></div>
+            <div class="div_left_box_info div_left_box_info_bottom"></div>
+            <div class="div_left_box_info div_left_box_info_bottom"></div>
+            <div class="div_left_box_info div_left_box_info_bottom"></div>
+        </div>
     </div>
 </body>
 </html>
