--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
@@ -1,1 +1,47 @@
-﻿
+﻿.div_left_box {
+    width: 751px;
+    height: 332px;
+    display: inline-block;
+    float: left;
+    border: 1px solid #eeeeee;
+    margin-top: 15px;
+    border-right: none;
+}
+
+.div_left_box_info {
+    width: 150px;
+    height: 110px;
+    display: inline-block;
+    float: left;
+    border: 1px solid #eeeeee;
+    border-top: none;
+    border-left: none;
+    text-align: center;
+}
+
+.div_left_box_info_bottom {
+    border-bottom: none;
+}
+
+.div_left_box_info:hover {
+    background-color: #f3f9fa;
+    cursor: pointer;
+}
+
+.img_left_box_info {
+    width: 28px;
+    height: 28px;
+    display: block;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    margin-top: 26px;
+}
+
+.span_left_box_info_text {
+    color: #5bc0de;
+    height: 28px;
+    width: 120px;
+    display: block;
+    margin: 0 auto;
+    margin-top: 10px;
+}
