--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -17,12 +17,26 @@
     <div>
         <div class="div_left_box">
             <div class="div_left_box_info">
-                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx_sy_zhyecz.png")" />
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhyecz.png")" />
                 <span class="span_left_box_info_text">账户余额充值</span>
+                <span class="span_left_box_info_remark">进入我的账户充值</span>
+               
             </div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhmm.png")" />
+                <span class="span_left_box_info_text">找回密码</span>
+                <span class="span_left_box_info_remark">自助快速找回账户密码</span>
+            </div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_dhbmycx.png")" />
+                <span class="span_left_box_info_text">电话被冒用查询</span>
+                <span class="span_left_box_info_remark">输入电话号码自助查询</span>
+            </div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_sbddxyzm.png")" style="width: 36px;" />
+                <span class="span_left_box_info_text">收不到短信验证码</span>
+                <span class="span_left_box_info_remark">自助电话获取语音验证码</span>
+            </div>
             <div class="div_left_box_info"></div>
             <div class="div_left_box_info"></div>
             <div class="div_left_box_info"></div>
