--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -20,7 +20,7 @@
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhyecz.png")" />
                 <span class="span_left_box_info_text">账户余额充值</span>
                 <span class="span_left_box_info_remark">进入我的账户充值</span>
-               
+
             </div>
             <div class="div_left_box_info">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhmm.png")" />
@@ -37,13 +37,41 @@
                 <span class="span_left_box_info_text">收不到短信验证码</span>
                 <span class="span_left_box_info_remark">自助电话获取语音验证码</span>
             </div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info"></div>
-            <div class="div_left_box_info div_left_box_info_bottom"></div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_rzsm.png")" />
+                <span class="span_left_box_info_text">认证说明</span>
+                <span class="span_left_box_info_remark">介绍认证及认证中的问题</span>
+            </div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_xxwffb.png")" />
+                <span class="span_left_box_info_text">信息无法发布</span>
+                <span class="span_left_box_info_remark">点击查看发帖失败原因</span>
+            </div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_xxbsc.png")" />
+                <span class="span_left_box_info_text">信息被删除</span>
+                <span class="span_left_box_info_remark">查看被删除原因</span>
+            </div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_fbgzltz.png")" />
+                <span class="span_left_box_info_text">发布高质量帖子</span>
+                <span class="span_left_box_info_remark">教你发布用户喜欢的贴</span>
+            </div>
+            <div class="div_left_box_info">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_ftbg.png")" />
+                <span class="span_left_box_info_text">发帖版规</span>
+                <span class="span_left_box_info_remark">发帖质量控制说明</span>
+            </div>
+            <div class="div_left_box_info" id="div_left_box_info_zdjs">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zdjs.png")" />
+                <span class="span_left_box_info_text">置顶介绍</span>
+                <span class="span_left_box_info_remark">介绍信息置顶及步骤</span>
+            </div>
+            <div class="div_left_box_info div_left_box_info_bottom">
+                <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_esjybzzx.png")" />
+                <span class="span_left_box_info_text">二手交易保障中心</span>
+                <span class="span_left_box_info_remark">买家卖家安全交易常识</span>
+            </div>
             <div class="div_left_box_info div_left_box_info_bottom"></div>
             <div class="div_left_box_info div_left_box_info_bottom"></div>
             <div class="div_left_box_info div_left_box_info_bottom"></div>
