--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_ZDJS.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY_ZDJS.css
@@ -67,6 +67,9 @@
 
 .div_body_nav {
     margin-top: 20px;
+    display: block;
+    height: 206px;
+    width: 1000px;
 }
 
 .span_body_nav {
@@ -80,5 +83,36 @@
 
 .span_body_nav:hover {
     cursor: pointer;
-    text-decoration: underline;
+    color: #ff6100;
+}
+
+.div_body_nav_title {
+    background-color: #f7f7f7;
+    width: 1000px;
+    height: 34px;
+    border-left: 2px solid #5bc0de;
+    display: block;
+    margin-top: 20px;
+    padding-left: 10px;
+    padding-top: 4px;
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.div_body_nav_text {
+    font-size: 14px;
+    padding: 10px 10px;
+    font-family: 宋体;
+    line-height: 34px;
+}
+
+.highlight {
+    color: #ff6100;
+    font-weight: 700;
+    
+}
+
+.highlight:hover {
+    text-decoration: none;
+    color: #ff6100;
 }
