--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -41,13 +41,11 @@
         </div>
         <div class="div_body_nav_title">置顶是什么？</div>
         <div class="div_body_nav_text">
-            &nbsp;&nbsp;&nbsp;&nbsp;信息置顶是信息小镇为用户提供的一项<a class="highlight">增值服务</a>,用户可通过账户余额或第三方支付来购买该服务。信息置顶后，
-            在同类别中显示在列表<span class="highlight">最靠前的位置</span>,，该信息不因为有新的帖子发布额往后排。
+            &nbsp;&nbsp;&nbsp;&nbsp;信息置顶是信息小镇为用户提供的一项<a class="highlight">增值服务</a>,用户可通过账户余额或第三方支付来购买该服务。信息置顶后，在同类别中显示在列表<span class="highlight">最靠前的位置</span>,，该信息不因为有新的帖子发布额往后排。
         </div>
         <div class="div_body_nav_title">置顶有什么好处？</div>
         <div class="div_body_nav_text">
-            &nbsp;&nbsp;&nbsp;&nbsp;置顶的好处在于信息<a class="highlight">不因为有新的帖子发布而往后排</a>,这样能保证用户的帖子在同类信息中<a class="highlight">受到最多的关注</a>。因
-            为网友在浏览信息时都会先浏览靠前的内容，这样您发布信息的有效性就得到了保障。
+            &nbsp;&nbsp;&nbsp;&nbsp;置顶的好处在于信息<a class="highlight">不因为有新的帖子发布而往后排</a>,这样能保证用户的帖子在同类信息中<a class="highlight">受到最多的关注</a>。因为网友在浏览信息时都会先浏览靠前的内容，这样您发布信息的有效性就得到了保障。
         </div>
         <div class="div_body_nav_title">计划置顶是什么？</div>
         <div class="div_body_nav_text">
@@ -55,8 +53,7 @@
         </div>
         <div class="div_body_nav_title">置顶怎么展示？</div>
         <div class="div_body_nav_text">
-            &nbsp;&nbsp;&nbsp;&nbsp;置顶后信息将智能投放在与您信息发布类别高相关页面，不跨类别情况下至少展示了32个相关频道页面 。最大化
-            的实现高智能（自动）+高精准（相关） 频道页面投放。置顶信息将以轮播的方式，动态更新置顶区域排序，让每条置顶信息获得更平均的展示机会。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;置顶后信息将智能投放在与您信息发布类别高相关页面，不跨类别情况下至少展示了32个相关频道页面 。最大化的实现高智能（自动）+高精准（相关） 频道页面投放。置顶信息将以轮播的方式，动态更新置顶区域排序，让每条置顶信息获得更平均的展示机会。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;当<a class="highlight">购买数量＞展示数量</a>,时，超出展示数量的置顶信息将会进入隐藏队列，等待<a class="highlight">轮播展示</a>；已经在展示中的置顶信息，在列表页轮播一段时间后也会再次进入隐藏队列，等待下一轮的展现。
         </div>
         <div class="div_body_nav_title">立即置顶怎么操作？</div>
