帮助中心-置顶服务

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
@@ -38,7 +38,7 @@
 }
 
 .span_left_box_info_text {
-    color: #5bc0de;
+    color: #31b0d5;
     height: 20px;
     width: 120px;
     display: block;
@@ -47,7 +47,6 @@
 }
 
 .span_left_box_info_remark {
-    color: #5bc0de;
     height: 20px;
     width: 150px;
     display: block;
