--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_ZDJS.cshtml
@@ -39,46 +39,46 @@
             <span class="span_body_nav">11、<span class="span_body_nav_inner">用户余额怎么提现？</span></span>
             <span class="span_body_nav">12、<span class="span_body_nav_inner">信息小镇推广用户服务协议</span></span>
         </div>
-        <div class="div_body_nav_title">置顶是什么？</div>
+        <div class="div_body_nav_title">1.置顶是什么？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;信息置顶是信息小镇为用户提供的一项<a class="highlight">增值服务</a>,用户可通过账户余额或第三方支付来购买该服务。信息置顶后，在同类别中显示在列表<span class="highlight">最靠前的位置</span>,，该信息不因为有新的帖子发布额往后排。
         </div>
-        <div class="div_body_nav_title">置顶有什么好处？</div>
+        <div class="div_body_nav_title">2.置顶有什么好处？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;置顶的好处在于信息<a class="highlight">不因为有新的帖子发布而往后排</a>,这样能保证用户的帖子在同类信息中<a class="highlight">受到最多的关注</a>。因为网友在浏览信息时都会先浏览靠前的内容，这样您发布信息的有效性就得到了保障。
         </div>
-        <div class="div_body_nav_title">计划置顶是什么？</div>
+        <div class="div_body_nav_title">3.计划置顶是什么？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;计划置顶是系统根据您的置顶计划自动完成周期性置顶操作，您可以按星期设置循环持续的置顶时段，在您设置的置顶时间段内，系统自动帮您完成操作，获得更长期更持续的推广效果，省时省力更省心。
         </div>
-        <div class="div_body_nav_title">置顶怎么展示？</div>
+        <div class="div_body_nav_title">4.置顶怎么展示？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;置顶后信息将智能投放在与您信息发布类别高相关页面，不跨类别情况下至少展示了32个相关频道页面 。最大化的实现高智能（自动）+高精准（相关） 频道页面投放。置顶信息将以轮播的方式，动态更新置顶区域排序，让每条置顶信息获得更平均的展示机会。<br />
             &nbsp;&nbsp;&nbsp;&nbsp;当<a class="highlight">购买数量＞展示数量</a>,时，超出展示数量的置顶信息将会进入隐藏队列，等待<a class="highlight">轮播展示</a>；已经在展示中的置顶信息，在列表页轮播一段时间后也会再次进入隐藏队列，等待下一轮的展现。
         </div>
-        <div class="div_body_nav_title">立即置顶怎么操作？</div>
+        <div class="div_body_nav_title">5.立即置顶怎么操作？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;当您成功发布信息或在个人中心管理信息时，进入立即置顶设置页面，根据提示选择您所需的置顶时长，确定提交即可。设置置顶会扣除对应业务线的推广币（不足时也会扣小镇现金），如果您的业务线推广币和小镇现金仍然不够，您可以选择用微信、支付宝支付剩余的钱，或者选择在线充值推广币和小镇现金。
         </div>
-        <div class="div_body_nav_title">立即置顶怎么扣费？</div>
+        <div class="div_body_nav_title">6.立即置顶怎么扣费？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;选择置顶天数后点击“立即置顶”按钮，系统会自动扣除您账户中相应的费用。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;对于正在置顶中的信息，当您点击“结束置顶”并确认后，系统将根据您的已置顶时长<a class="highlight">（立即置顶不足1小时按1小时算）</a>返还您不同比例的剩余费用，具体为：<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;当置顶时长<a class="highlight">小于2小时</a>时，返还您<a class="highlight">40%</a>剩余费用；当置顶时长<a class="highlight">大于2小时且小于12小时</a>时，返还您<a class="highlight">50%</a>剩余费用；当置顶时长<a class="highlight">大于12小时且小于24小时</a>时，返还您<a class="highlight">75%</a>剩余费用；当置顶时长<a class="highlight">大于24小时且小于72小时</a>时，返还您<a class="highlight">90%</a>剩余费用；当置顶时长<a class="highlight">大于72小时</a>时，返还您<a class="highlight">95%</a>剩余费用。
         </div>
-        <div class="div_body_nav_title">计划置顶怎么操作？</div>
+        <div class="div_body_nav_title">7.计划置顶怎么操作？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;当您成功发布信息或在个人中心管理信息时，进入计划置顶设置页面，根据提示选择您选择星期一到星期日的置顶时段，然后设置计划置顶的开始时间和结束时间，确定提交即可。设置置顶会扣除对应业务线的推广币（不足时也会扣小镇现金），如果您的业务线推广币和58现金仍然不够，您可以选择用微信、支付宝支付剩余的钱，或者选择在线充值推广币和小镇现金。
         </div>
-        <div class="div_body_nav_title">计划置顶怎么扣费？</div>
+        <div class="div_body_nav_title">8.计划置顶怎么扣费？</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;设置好计划置顶并提交后，页面会提示您预计需支付的钱并一次性扣除计划置顶推广费用。对于正在置顶中的信息，当您点击“结束置顶”并确认后，系统将根据您的已置顶时长<a class="highlight">（计划置顶时间不足1天按1天算）</a>返还您剩余推广余额的<a class="highlight">95%</a>。
         </div>
-        <div class="div_body_nav_title">简历置顶扣费规则</div>
+        <div class="div_body_nav_title">9.简历置顶扣费规则</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;对于置顶中的简历，当用户自己操作结束置顶、删除简历、将简历信息状态变更为对认证企业公开、保密（只对投递的企业公开）或 简历信息状态变更为敏感（审核中）、返回修改时，简历置顶结束，并且不退款；当系统审核用户简历违规时，简历置顶结束，并且不退款。
         </div>
-        <div class="div_body_nav_title">置顶规则与协议</div>
+        <div class="div_body_nav_title">10.置顶规则与协议</div>
         <div class="div_body_nav_text">
             &nbsp;&nbsp;&nbsp;&nbsp;在您使用信息小镇置顶服务前，请您仔细阅读以下规则，您需要理解并同意以下规则才能享受信息小镇置顶服务：<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;（1）当您对置顶中信息进行删除或关闭时，该信息的置顶状态将自动结束，返还费用规则<a class="highlight">同结束置顶</a>。<br/>
@@ -87,9 +87,45 @@
             &nbsp;&nbsp;&nbsp;&nbsp;（4）当您在使用信息小镇置顶服务时，<a class="highlight">必须遵守信息小镇信息发布的相关规定（包含但不限于《信息小镇推广用户协议》）、中国有关法律法规、其他有关国家和地区的法律规定以及国际法的有关规定</a>。若您的行为不符合以上提到的规定及法规，信息小镇将作出独立判断立即取消您的置顶信息，暂停或终止为您提供服务，同时您的账户余额作为罚金将不予返还。<a class="highlight">如您发布的信息造成信息小镇被第三方要求赔偿或发生纠纷、诉讼的，您应向信息小镇全额赔偿损失</a>。<br/>
             &nbsp;&nbsp;&nbsp;&nbsp;（5）请您保护好自己的账户名和密码，不要随意泄露给他人，在<a class="highlight">公共场合登录</a>使用小镇账户时<a class="highlight">注意及时退出</a>，以免账号被盗造成损失。
         </div>
-        <div class="div_body_nav_title">用户余额怎么提现？</div>
+        <div class="div_body_nav_title">11.用户余额怎么提现？</div>
         <div class="div_body_nav_text">
-            &nbsp;&nbsp;&nbsp;&nbsp;当用户小镇账户中有推广余额并<a class="highlight">想要提现</a>时，可联系小镇客服电话<a class="highlight">400-453-5838</a>申请提现。
+            &nbsp;&nbsp;&nbsp;&nbsp;当用户小镇账户中有余额并<a class="highlight">想要提现</a>时，可联系小镇客服电话<a class="highlight">400-453-5838</a>申请提现。
+        </div>
+        <div class="div_body_nav_title">12.信息小镇用户服务协议</div>
+        <div class="div_body_nav_text">
+            &nbsp;&nbsp;&nbsp;&nbsp;信息小镇用户服务协议（以下简称“本协议”）是信息小镇用户与信息小镇之间的法律协议。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;本协议是用户注册账号并充值支付,使用信息小镇网服务时适用的通用条款。因此，请您在注册信息小镇网账号并充值、支付，或接受使用信息小镇对信息小镇用户提供的相关服务之前，详细地阅读本协议的所有内容。信息小镇用户需要了解并同意以下条款所述事项才能完成充值支付,享受信息小镇的各项服务。无论您事实上是否认真阅读，只要您勾选同意或点击确认本协议,或者实际接受了信息小镇的相关服务，就表示您已接受了本协议及信息小镇网公布的各推广服务相关的服务协议和服务规则，并愿意受其约束。如果发生纠纷，您不能以未仔细阅读为由进行抗辩。<br/>
+            一、定义<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、信息小镇用户：指符合本协议规定的条件并已通过代理商或直接向信息小镇网的账户中充值或向信息小镇支付服务费用，使用信息小镇网服务的单位或个人，本协议中也称“您”或“甲方”或“用户”。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;2、信息小镇：指信息小镇网（www.infotownlet.com）的网络服务提供者，包括信息小镇网（www.infotownlet.com）的所有者及其关联服务提供方，本协议中也称“本公司”或“乙方”。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;3、服务：指信息小镇网为信息小镇用户提供的充值支付后可使用的网络营销推广、在线交易的服务，服务内容包括但不限于小镇交易宝服务、小镇余额服务、小镇推广余额服务、小镇置顶服务、小镇精准推广服务、小镇智能推广服务、小镇品牌推广服务、小镇QQ推广服务等。具体推广服务的类型、内容和规则见信息小镇网各充值类型、充值渠道、服务申请或其他相关页面的说明。信息小镇网推广服务类型、内容等有可能根据信息小镇需要随时做出更改。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;4、信息小镇网官方渠道：指信息小镇网提供给用户进行充值支付的渠道，包括用户在信息小镇网上的在线充值渠道，及用户从信息小镇处购买并能提供有效协议、发票等合法凭证后实现账户内充值的渠道。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;5、信息小镇充值类型：指信息小镇网根据不同的服务类型、服务对象等为用户提供的不同的充值类型和方式。包括小镇交易宝、小镇余额、小镇推广余额等，在信息小镇网和本协议中亦称“余额类型”。上述一种或多种充值类型通称为“余额”或“充值余额”。<br />
+            二、本协议的组成、变更及生效<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;1、信息小镇网站及用户后台发布的推广服务相关的各服务协议、服务条款、操作规则、审核规则、帮助、名词解释等（本协议中统称“规则”）为本协议的有效组成部分，信息小镇按照本协议、推广服务相关的各项规则为广大用户提供信息小镇服务。本协议是《信息小镇使用协议》的有效组成部分，本协议未涉及的事项依照《信息小镇使用协议》处理。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;2、用户欲使用、接受信息小镇服务，请事先认真阅读本协议中各条款。您勾选同意或者点击确认即视为接受本协议内容，同意签署本协议。如果您不同意本协议的约定，应立即停止使用信息小镇服务。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;3、您确认信息小镇将有权对您提交的资质和相关内容进行审核，您了解并同意，如您提交的资质虚假或者您的推广内容违反国家法律法规的相关规定或者违反信息小镇的审核规则，信息小镇将有权拒绝为您提供服务。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;4、信息小镇有权根据国家法律法规的更新、产品和服务规则的调整需要不时地制订、修改本协议及/或相关规则，并以网站公示的方式进行公示。如您继续使用信息小镇的服务，即表示您接受经修订的协议和规则。如发生有关争议时，以最新的信息小镇用户服务协议为准。<br/>
+            三、双方的权利与义务<br />
+            1、甲方的权利与义务<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（1）甲方保证系符合中华人民共和国法律法规的合法经营主体并已取得经营相关业务的合法资质。乙方有权对其主体资质真实性进行核查，甲方拒绝乙方核查或乙方有理由怀疑其真实合法性的，乙方有权拒绝为其提供服务。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（2）甲方保证按照乙方的审核规则提供资质材料，且保证所提供的由其签字和/加盖公章的资质证明文件（包括但不限于营业执照、身份证、税务登记证、组织机构代码证、特殊行业经营许可证等）复印件均为原件的真实复制件，与原件内容、格式完全相符，并无任何增加、删减、修改或其他编辑；保证其提供的资质证明文件真实、有效、合法，不得冒用、盗用、仿造、变造，否则乙方有权终止提供服务，由此造成的一切法律后果由甲方独自承担。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（3）甲方承诺拥有完全民事权利能力和民事行为能力签署并履行本协议，且签署并履行本协议不违反任何对其有约束力的适用法律的限制，也不会侵犯本协议以外任何第三方之合法权益；甲方对其在信息小镇网进行推广的产品或者服务，以及充值支付、交易等行为具有完整、合法的权利；甲方自身交易、经营活动合法、服务项目用途合法、所发布之信息内容不会损害乙方及关联公司的利益、商誉和品牌形象，否则乙方有权终止提供服务并有权要求甲方赔偿由此给乙方造成的包括商誉损失在内的全部损失，甲方同意乙方可从甲方充值余额中扣除相关损失。如因甲方原因造成乙方被第三方要求赔偿或发生纠纷、诉讼的，甲方应向乙方全额赔偿损失。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（4）甲方承诺并保证：向乙方提供真实、合法、准确的信息，并根据实际情况的变化及时更新手机号码、电子邮件等联系信息，捆绑账户的手机号码和电子邮件发生变更、遗失等情况时，及时通知乙方并修改相关信息。否则，因此产生的不良后果由甲方自己承担。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（5）甲方应按照双方约定或信息小镇网提示的规则和方式向乙方支付服务费用或向其账户中充值支付。当甲方充值余额不足以支付推广服务费用时，甲方应及时充值，如因甲方或其代理商没有及时充值而造成甲方推广内容下线导致信息小镇推广服务终止的，乙方不承担任何责任。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（6）甲方须根据本协议及各项规则的规定使用乙方推广服务，须按照国家法律法规、本协议的规定发布、推广信息，并对其发布信息和内容以及在线交易行为独自承担责任。甲方有权变更在信息小镇网上宣传、推广的图片及相关资料，但变更内容必须合法有效并符合本协议的相关约定。甲方不得通过修改推广内容、设置网站跳转、设置恶意代码、设置病毒等任何方式展现违反现行法律法规以及信息小镇推广服务规则的内容，否则乙方有权终止提供服务并有权要求甲方赔偿由此给乙方造成的包括商誉损失在内的全部损失，甲方同意乙方可从甲方充值余额中扣除相关损失。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（7）甲方同意乙方通过信息小镇网（www.infotownlet.com）站内公告、站内信、手机短信、用户后台或甲方填写的其他联系方式向甲方发布产品规则、政策、通知等信息。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（8）甲方同意乙方有权根据经营需要变更推广服务的具体形式和内容。乙方推广服务形式、内容发生变更前，乙方应通过站内公告、站内信、邮件、电话或短信、用户后台等方式(上述任一方式)通知甲方。甲方使用变更后的服务，视为甲方接受变更。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（9）甲方应保证推广信息、财务信息与协议约定的主体一致或已经取得协议主体的授权，如因甲方原因导致推广内容与和协议主体不一致，由此导致的财务等风险由甲方承担，乙方不承担任何责任；由此给乙方造成损失的，甲方应予以赔偿。<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（10）甲方承诺不得在推广内容中为甲方以外的第三方进行推广，包括但不限于通过设置URL、BANNER链接等情形推广第三方网站或者信息。乙方有权在甲方违反上述承诺时终止向甲方提供服务。如甲方推广内容、信息或页面中通过设置链接或跳转方式可链至甲方自有网站，则甲方承诺其网站经营及内容合法、有效，甲方同意乙方有权随时根据自我判断、第三方投诉、主管部门或司法机关的通知、裁决等撤除上述链接或跳转，乙方对此不承担任何责任。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（11）甲方对其在信息小镇网注册的用户名和密码负有妥善保管的义务，未经乙方书面同意不得将自身账号、密码、验证码等信息透露给第三方知晓或提供给任何第三方使用，并对以该用户名进行的所有活动和事件负全部责任。如因甲方自身不当行为造成的不良后果和损失，由甲方自行承担，乙方完全免责。甲方不当行为包括但不限于：1）登陆密码等信息保护不善，自己透露或提供给他人使用等情况，导致账户被冒用、盗用或造成余额损失的；2）不正当或非法使用信息小镇服务的行为；3）私自与他人、第三方对其充值余额进行交易的。 <br/>
+            2、乙方的权利与义务<br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（1）乙方如发现甲方有如下行为之一：推广信息含有任何违反国家有关法律、法规及中国承认或加入的国际条约的内容（包括但不限于危害国家安全、淫秽色情、虚假、违法、诽谤、恐吓或骚扰、侵犯他人知识产权、人身权或其他合法权益或利益以及有违公序良俗的内容或指向这些内容的链接）；推广商品和/或服务违反国家、行业的质量标准；假冒、欺诈等欺骗乙方网站其他用户权益的行为；采取任何违法或者作弊的行为以提高推广点击率或获取不正当交易机会；其他违反本协议约定的行为，则乙方有权不予退还服务费用并有权：（a）屏蔽并要求甲方按照乙方要求修改甲方发布、推广信息，甲方不予修改的，乙方有权删除信息并终止提供服务；（b）直接删除信息并终止提供服务，并有权要求甲方赔偿由此给乙方造成的包括商誉损失在内的全部损失，甲方同意乙方可从甲方充值余额中扣除相关损失。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（2）因乙方按审核规则进行资质审核、系统升级更新等原因有可能使推广服务开通晚于双方约定或乙方网页公布的时间，甲方给予理解。推广服务开始时间以实际开通为准。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（3）乙方信息小镇网是分类信息平台，乙方无法对甲方推广内容的真实性、准确性和完整性进行查证，对于甲方的推广内容不承担任何保证责任，甲方自行对其提供的推广内容、产品、服务等承担全部责任。甲方在推广时，不得擅自在推广内容中使用信息小镇推荐、授权等任何使公众认为该等推广内容经过信息小镇授权等字样。违反前述规定的，乙方有权解除本协议并追究甲方的法律责任。 <br/>
+            &nbsp;&nbsp;&nbsp;&nbsp;（4）乙方将尽力维护58推广服务的安全性和方便性，但对甲方使用推广服务过程中出现的信息删除或存储失败等不承担任何责任。<br />
+            &nbsp;&nbsp;&nbsp;&nbsp;（5）乙方保留判定甲方行为是否符合信息小镇服务相关的协议、规则要求的权利，如果甲方违反了上述协议、规则的规定，乙方有权终止提供推广服务。<br /> 
+
         </div>
     </div>
 </body>
